Fixed bug with touch on mobile

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     display: grid;
 
     cursor: default;
+    touch-action: none;
 }
 
 .etch-cell {
